Get SSID as well as connection state

--- a/wpa_state.1
+++ b/wpa_state.1
@@ -11,7 +11,8 @@
 .Nm
 connects to wpa_supplicant running on interface
 .Ar ifname ,
-and prints out the connection state. Whenever the connection state changes,
+and prints out the connection state and associated ESSID. Whenever the
+connection state changes,
 .Nm
 prints it to stdout.
 .Sh EXIT STATUS
